# klatexformula

./: .gitignore  AUTHORS  CMUFONTS_COPYING  CMakeLists.txt  ChangeLog  Doxyfile  Doxyfile.klfapp.in  Doxyfile.klfbackend  Doxyfile.klfbackend.in  Doxyfile.klflib.in  Doxyfile.klfsrc  Doxyfile.klftools.in  INSTALL  KLFUtil.cmake  Makefile.am  README  VERSION  VERSION.pri  cmake_uninstall.cmake.in  configure.in.in  descr_long.txt  descr_short.txt  klatexformula-spec-gen  klatexformula.kdevelop  klatexformula.pro  klatexformula.spec  mac_mkbundle.sh  mk_apidoc_archive.sh  mk_sf_apidoc.sh  mkbase
doc/en/: Makefile.am  index.docbook
src/: CMakeLists.txt  Makefile.am  defaultlibrary  klatexformula-metainfo.xml  klatexformula-mime.xml  klatexformula.ai  klatexformula.cls  klatexformula.cpp  klatexformula.desktop  klatexformula.desktop.in  klatexformula.h  klatexformula.lsm  klatexformula.rc  klatexformula.sh.in  klatexformulaui.rc  klfaboutdialog.ui  klfaboutdialogui.ui  klfadvancedconfigeditor.cpp  klfadvancedconfigeditor.h  klfadvancedconfigeditor.ui  klfadvancedconfigeditor_p.h  klfapp.cpp  klfapp.h  klfautoupdater.h  klfcmdiface.cpp  klfcmdiface.h  klfcmdl_main.cpp  klfcolorchooser.cpp  klfcolorchooser.h  klfcolorchoosewidget.ui  klfcolorchoosewidgetui.ui  klfcolordialog.ui  klfconfig.cpp  klfconfig.h  klfconfig_p.h  klfdata.cpp  klfdata.h  klfdbus.cpp  klfdbus.h  klfdisplaylabel.cpp  (+106 more)
src/conf/export_mime_profiles.d/: export_default.xml  export_default_4.0.xml
src/conf/latexfontdefs.d/: defaultfontdefs.xml
src/conf/latexsymbols.d/: latexsymbols.xml
src/data/: FOR_TRANSLATORS_DIFF_TO_3.2.2.diff  FOR_TRANSLATORS_DIFF_TO_3.2.4.diff  about.html  about_cs.html  about_fr.html  about_uk.html  base_symbolspixmapcache@2x-klf3.3  cmdl-help.txt  cmdl-help_cs.txt  cmdl-help_fr.txt  cmdl-help_uk.txt  defaultlibrary.klf  defaultlibrary.klf.db  latexsymbols.xml  ooodrawingtemplate  symbolspixmapcache_base  whats-new-3.2.html  whats-new-3.2_cs.html  whats-new-3.2_fr.html  whats-new-3.3.html  whats-new-3.3_fr.html  whats-new-4.0.html  whats-new-4.0_fr.html  whats-new-4.0_uk.html  whats-new-4.1.html  whats-new-4.1_fr.html
src/data/export_mime_profiles.d/: export_default.xml
src/i18n/: i18n.pro  i18nupdate.pl  klf_cs.ts  klf_el.qm  klf_el.ts  klf_fr.qm  klf_fr.ts  klf_uk.ts
src/i18n/obsolete/: klfcolorchoosewidgetui.ui  klfcolordialogui.ui  klfmainwinui.ui  klfsettingsui.ui  klfstylemanagerui.ui  obsoletetext.cpp
src/klf_cmdl/: klf_cmdl.cpp  klf_cmdl.pro
src/klfbackend/: CMakeLists.txt  Makefile.am  klfbackend.cpp  klfbackend.h  klfbackend.pro  klfbackend_p.h  klfbackendinput.cpp  klfbackendinput.h  klfblockprocess.cpp  klfblockprocess.h  klfdebug.cpp  klfdebug.h  klfdefs.cpp  klfdefs.h  klffilterprocess.cpp  klffilterprocess.h  klffilterprocess_p.h  klfimplementation.cpp  klfimplementation.h  klflatexpreviewthread.cpp  klflatexpreviewthread.h  klflatexpreviewthread_p.h  klfqt34common.h  klfstdimplementation.cpp  klfstdimplementation.h  klfstdworkflow.cpp  klfstdworkflow.h  klfuserscript.cpp  klfuserscript.h  klfworkflow.cpp  klfworkflow.h
src/klfbackend/latexsty/: .gitignore  klfimpl.dtx  klfimpl.ins  minitest.tex
src/klfkateplugin/: CMakeLists.txt  klfkateplugin.cpp  klfkateplugin.h  klfkateplugin_config.cpp  klfkateplugin_config.h  klfkatepluginconfigwidget.ui  klfkatepluginui.rc  klfkteparser.cpp  klfkteparser.h  klfkteparser_p.h  klfktepreviewwidget.ui  ktexteditor_klf.desktop  ktexteditor_klf_config.desktop
src/klftools/: CMakeLists.txt  klfadvancedconfigeditor.cpp  klfadvancedconfigeditor.h  klfadvancedconfigeditor.ui  klfadvancedconfigeditor_p.h  klfcolorchooser.cpp  klfcolorchooser.h  klfcolorchooser_p.h  klfcolorchoosewidget.ui  klfcolordialog.ui  klfconfigbase.cpp  klfconfigbase.h  klfdatautil.cpp  klfdatautil.h  klfdatautil_p.h  klfdebug.cpp  klfdebug.h  klfdefs.cpp  klfdefs.h  klfdefs_linux.cpp  klfdefs_mac.cpp  klfdefs_mac.mm  klfdefs_otheros.cpp  klfdefs_win.cpp  klfdisplaylabel.cpp  klfdisplaylabel.h  klfenumlistwidget.cpp  klfenumlistwidget.h  klffactory.cpp  klffactory.h  klfflowlayout.cpp  klfflowlayout.h  klfflowlayout_p.h  klfflowlistwidget.cpp  klfflowlistwidget.h  klfflowlistwidget_p.h  klfguiutil.cpp  klfguiutil.h  klfitemsearchdelegate.cpp  klfitemsearchdelegate.h  (+69 more)
src/klftools/macosx/: klfdrawerdefs.mm
src/macosx/: Info.plist.in  KLFMacBundle.cmake  klatexformula.icns  klfcmdifacedispatch_mac.mm  klfdrawerdefs.mm  klficon.icns  klfmacclipboard.cpp  klfmacclipboard.h  klfmainwin_mac.mm  klfsparkleupdater.h  klfsparkleupdater.mm  macChangeLibRef.pl  qt.conf
src/mswin/: klfwinclipboard.cpp  klfwinclipboard.h  klfwinsparkleupdater.cpp  klfwinsparkleupdater.h
src/pics/: Makefile.am  clear.ai  clearedit.ai  closehide.ai  evaluate.ai  exportprofile.ai  help.ai  library.ai  showpreview.ai  switchexpanded.ai  switchexpanded_drawer.ai  switchshrinked.ai  switchshrinked_drawer.ai  symbols.ai  wait_anim.mng
src/plugins/: CMakeLists.txt  info_baseplugins.xml  info_baseplugins.xml.in  klfbaseplugindata.qrc  klfbaseplugindata.rcc  klfbaseplugins.qrc  klfbaseplugins.qrc.in  klfbaseplugins.rcc  klfbaseplugins_mac.qrc  klfbaseplugins_unix.qrc  klfbaseplugins_win.qrc  plugindirinfo.xml.in  plugins.pro
src/plugins/buffers/: CMakeLists.txt  buffers.cpp  buffers.h  buffersdata.qrc  openbuffer.h  openbufferslistwidget.h  openbufferswidget.ui
src/plugins/filterscript/: filterscript.cpp  filterscript.h  filterscriptconfigwidget.ui
src/plugins/openfile/: CMakeLists.txt  openbuffer.h  openbufferslistwidget.h  openbufferswidget.ui  openfile.cpp  openfile.h
src/plugins/skin/: CMakeLists.txt  moc_skin.cpp  skin.cpp  skin.h  skin.pro  skinconfigwidget.ui  skindata.qrc  ui_skinconfigwidget.h
src/plugins/systrayicon/: CMakeLists.txt  moc_systrayicon.cpp  systrayicon.cpp  systrayicon.h  systrayicon.pro  systrayiconconfigwidget.ui  systraymainiconifybuttons.ui  ui_systrayiconconfigwidget.h  ui_systraymainiconifybuttons.h
src/plugins/userscripts/: customtemplate.py  gif-convert.py  (+5 more)
src/userscripts/: aicb-data-export.py  html-data-export.py
src/x11/: klfx11.cpp
(+122 files in other folders)
